refresh button added, but without functionality working. taking a job by one person constraint added in database and php.

--- a/AuthorityApp/app/src/main/res/values/strings.xml
+++ b/AuthorityApp/app/src/main/res/values/strings.xml
@@ -291,4 +291,5 @@
     <string name="title_activity_review_ajob">ReviewAJobActivity</string>
     <string name="title_activity_highscores">HighscoresActivity</string>
     <string name="jobs_list">Jobs list:</string>
+    <string name="refresh">Refresh</string>
 </resources>
