--- a/AuthorityApp/app/src/main/res/values/strings.xml
+++ b/AuthorityApp/app/src/main/res/values/strings.xml
@@ -282,7 +282,13 @@
         <item>Fire brigade staff</item>
         <item>Police staff</item>
     </string-array>
+    <string-array name="JobStatus">
+        <item>Solved</item>
+        <item>False alarm</item>
+        <item>Impossible to solve</item>
+    </string-array>
     <string name="type_prompt">Choose staff type: </string>
+    <string name="job_status_prompt">Choose job status: </string>
     <string name="title_activity_main">MainActivity</string>
     <string name="take_a_job">Take a job</string>
     <string name="review_a_job">Review a job</string>
@@ -293,4 +299,6 @@
     <string name="jobs_list">Jobs list:</string>
     <string name="refresh">Refresh</string>
     <string name="return_job">Return job</string>
+    <string name="review_comment">Type a comment</string>
+    <string name="review_the_job">Review the job</string>
 </resources>
