--- a/AuthorityApp/app/src/main/res/values/strings.xml
+++ b/AuthorityApp/app/src/main/res/values/strings.xml
@@ -301,4 +301,5 @@
     <string name="return_job">Return job</string>
     <string name="review_comment">Type a comment</string>
     <string name="review_the_job">Review the job</string>
+    <string name="title_activity_view_job_details">ViewJobDetailsActivity</string>
 </resources>
