Style review job

--- a/AuthorityApp/app/src/main/res/values/strings.xml
+++ b/AuthorityApp/app/src/main/res/values/strings.xml
@@ -340,6 +340,8 @@
         <item>263,ZW</item>
     </string-array>
     <string name="title_activity_map">MapActivity</string>
+    <string name="job_review">Job review</string>
+    <string name="write_review">Write review</string>
 
 
 </resources>
