--- a/AuthorityApp/app/src/main/res/values/strings.xml
+++ b/AuthorityApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">AuthorityApp</string>
+    <string name="app_name">Authority Guardian</string>
     <string name="action_settings">Settings</string>
     <string name="username">Username</string>
 
